--- a/primeiro_projeto.html
+++ b/primeiro_projeto.html
@@ -5,3 +5,12 @@ Confira se é um programa clicando <a href="http://www.alura.com.br">aqui</a>
 <script> 
 alert("Isso sim é um programa!"); 
 </script>
+
+<meta charset="UTF-8">
+<script>
+    alert("Isso");
+    alert("é");
+    alert("um");
+    alert("programa");
+    alert("sim");
+</script>
