--- a/primeiro_projeto.html
+++ b/primeiro_projeto.html
@@ -17,3 +17,9 @@ alert("Isso sim é um programa!");
 </script>
 !-->
 
+<script>
+
+    document.write("A idade do Flávio é ");
+    document.write("18");
+
+</script>
