--- a/primeiro_projeto.html
+++ b/primeiro_projeto.html
@@ -4,6 +4,9 @@
 Seria isso um programa? Confira se é um programa clicando <a href="http://www.alura.com.br">aqui</a>
 <script> 
 alert("Isso sim é um programa!"); 
+document.write("A idade do Flávio é ");
+document.write("18");
+
 </script>
 
 <!--
