--- a/primeiro_projeto.html
+++ b/primeiro_projeto.html
@@ -3,9 +3,7 @@
 <br>
 Seria isso um programa? Confira se é um programa clicando <a href="http://www.alura.com.br">aqui</a>
 <script> 
-document.write("A idade do Flávio é ");
-document.write("18");
-
+alert("Isso sim é um programa!"); 
 </script>
 
 <!--
@@ -16,5 +14,14 @@ document.write("18");
     alert("um");
     alert("programa");
     alert("sim");
+</script>
+!-->
+
+<!--
+<script>
+
+    document.write("A idade do Flávio é ");
+    document.write("18");
+
 </script>
 !-->
