--- a/primeiro_projeto.html
+++ b/primeiro_projeto.html
@@ -2,6 +2,7 @@
 <h1> Meu Primeiro Teste!</h1>
 <br>
 Seria isso um programa? Confira se é um programa clicando <a href="http://www.alura.com.br">aqui</a>
+<br>
 <script> 
 alert("Isso sim é um programa!"); 
 </script>
@@ -25,3 +26,6 @@ alert("Isso sim é um programa!");
 
 </script>
 !-->
+<script>
+    document.write((200 + 100 + 300 + 400)/4);
+</script>
