--- a/primeiro_projeto.html
+++ b/primeiro_projeto.html
@@ -26,6 +26,9 @@ alert("Isso sim é um programa!");
 
 </script>
 !-->
+<!--
+<h1>Média de Gasto Por Viagem</h1>
 <script>
     document.write((200 + 100 + 300 + 400)/4);
 </script>
+!-->
