--- a/prova.html
+++ b/prova.html
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
 <script>
-    document.write("Eu acertei: ");
-    document.write((15/50)*100)
+    document.write("Eu acertei: " + 15/50*100 + "%" );
+
 </script>
