--- a/prova.html
+++ b/prova.html
@@ -2,3 +2,12 @@
 <script>
     document.write("Eu acertei: " + 15/50*100 + "%" );
 </script>
+
+
+<meta charset="UTF-8">
+
+<script>
+    document.write("Flávio nasceu em " + (2016 - 39) + "<br>");
+    document.write("Joaquim nasceu em " + (2016 - 20) + "<br>"););
+    document.write("Barney nasceu em " + (2016 - 40) + "<br>"););
+</script>
