--- a/calculo_consumo.html
+++ b/calculo_consumo.html
@@ -1,3 +1,8 @@
 <meta charset="UTF-8">
 <h3>Álcool ou Gasolina?</h3>
 <script>
+    var l = 40;
+    var km = 480;
+document.write("O carro gasta " + (km / l) + "l de gasolina por km" + "<br>");
+
+</script>
