--- a/calculo_consumo.html
+++ b/calculo_consumo.html
@@ -1,8 +1,10 @@
 <meta charset="UTF-8">
 <h3>Álcool ou Gasolina?</h3>
 <script>
-    var l = 40;
-    var km = 480;
-document.write("O carro gasta " + (km / l) + "l de gasolina por km" + "<br>");
-
+    var consumoDeGasolina = 40;
+    var caminhoComGasolina = 480;
+document.write("O consumo é " + (caminhoComGasolina / consumoDeGasolina) + "litros de gasolina por km" + "<br>");
+var consumoDeAlcool = 40;
+var caminhoComAlcool = 300;
+document.write("O consumo é" + (caminhoComAlcool / consumoDeAlcool) + "litros de alcool por km");
 </script>
