--- a/Projetos/idadeLinhas.html
+++ b/Projetos/idadeLinhas.html
@@ -2,15 +2,23 @@
 
 <script>
 
-    var ano = 2016;
+    function pulaLinha() {
 
-    document.write("Flávio tem " + (ano - 1977) + " anos");
-    document.write("<br>");
-    document.write("Joaquim tem " + (ano - 1996) + " anos");
-    document.write("<br>");
+        document.write("<br>");
+        document.write("<br>");
 
-    ano = 2017;
-    document.write("Barney tem " + (ano - 1976) + " anos");
-    document.write("<br>");
+}
+
+var ano = 2016;
+
+document.write("Flávio tem " + (ano - 1977) + " anos");
+pulaLinha();
+
+document.write("Joaquim tem " + (ano - 1996) + " anos");
+
+pulaLinha();
+
+ano = 2017;
+document.write("Barney tem " + (ano - 1976) + " anos");
 
 </script>
