--- a/Projetos/idadeLinhas.html
+++ b/Projetos/idadeLinhas.html
@@ -2,7 +2,7 @@
 
 <script>
 
-    function pulaLinha() {
+    function x() {
 
         document.write("<br>");
         document.write("<br>");
@@ -12,13 +12,15 @@
 var ano = 2016;
 
 document.write("Flávio tem " + (ano - 1977) + " anos");
-pulaLinha();
+
+x();
 
 document.write("Joaquim tem " + (ano - 1996) + " anos");
 
-pulaLinha();
+x();
 
 ano = 2017;
+
 document.write("Barney tem " + (ano - 1976) + " anos");
 
 </script>
