--- a/Projetos/idadeIrmao.html
+++ b/Projetos/idadeIrmao.html
@@ -12,3 +12,7 @@
     mostra("Meu irmão tem " + idadeIrmao + " anos"); pulaLinha();
     mostra("Nossa diferença de idade é de " + (idadeMinha - idadeIrmao) + " anos");
 </script>
+
+<!--
+    Parecia mais fácil na minha mente.
+-->
