--- a/Projetos/geracao_media.html
+++ b/Projetos/geracao_media.html
@@ -14,3 +14,24 @@
     mostra("Quantas gerações se passaram?"); pulaLinha();
     mostra("Se passaram " + Math.round(anosDecorridos / idadePais) + " gerações ao decorrer do tempo.");
 </script>
+
+<!--Como comparação a resposta do professor:
+<meta charset="UTF-8">
+
+    <script>
+        function pulaLinha() {
+            document.write("<br>");
+        }
+
+        function mostra(frase) {
+            document.write(frase);
+            pulaLinha();
+        }
+
+        var idadeMediaQuandoTemFilhos = 28;
+        var anoAtual = 2016; 
+
+        var quantidadeDeGeracoes = (anoAtual - 1500) / idadeMediaQuandoTemFilhos;
+
+        mostra(quantidadeDeGeracoes);
+    </script>-->
