--- a/Projetos Lógica I/jogo_adivinha.html
+++ b/Projetos Lógica I/jogo_adivinha.html
@@ -1,4 +1,48 @@
 <meta charset="UTF-8">
+<script>
+
+    function pulaLinha() {
+
+        document.write("<br>");
+    }
+
+    function mostra(frase) {
+
+        document.write(frase);
+        pulaLinha();
+    }
+
+    function sorteia(n) {
+
+        return Math.round(Math.random() * n);
+    }    
+
+    var numeroPensado = sorteia(10);
+
+
+     var chute = parseInt(prompt("Já decidi. Qual você acha que é?"));
+
+    if(chute == numeroPensado) {
+
+        mostra("Você acertou, eu pensei no " + numeroPensado + ".");
+    } else {
+
+        if(chute > numeroPensado) {
+
+            mostra("Você errou! Seu resposta é maior que o número pensado!");
+
+        } else {
+
+            mostra("Você errou! Sua resposta é menor que o número pensado!");
+        }
+
+    }
+</script>
+
+
+
+<!--
+    <meta charset="UTF-8">
 
 <script>
 
@@ -26,3 +70,4 @@ if(chute == numeroPensado) {
      }
 
 </script>
+-->
