--- a/Projetos Lógica II/ bandeira_brasil.html
+++ b/Projetos Lógica II/ bandeira_brasil.html
@@ -1,5 +1,5 @@
 <canvas width="600" height="400"></canvas>
-
+//projeto bandeira do brasil
 <script>
 
     var tela = document.querySelector('canvas');
